--- a/theme/less/_main.less
+++ b/theme/less/_main.less
@@ -54,3 +54,6 @@
 // Utility classes
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
+
+//document-Safe
+@import "ds.less";
