--- a/web/css/sender.css
+++ b/web/css/sender.css
@@ -10,6 +10,9 @@
 .s_congstar{
     background-color: #000000;
 }
-.s_mediamarkt{
+.s_mediamarkt {
     background-color: #df0000;
+}
+.s_aok {
+    background-color: #319f49;
 }
