first User support

--- a/web/css/sender.css
+++ b/web/css/sender.css
@@ -16,3 +16,9 @@
 .s_aok {
     background-color: #319f49;
 }
+.s_ikea{
+    background-color: #003399;
+}
+.s_axa{
+    background-color: #26468f;
+}
