--- a/web/css/tag.css
+++ b/web/css/tag.css
@@ -15,6 +15,7 @@
 }
 .tag_grey{
     background-color: #808080;
+    color: #ffffff;
 }
 .tag_brown{
     background-color: #A52A2A;
@@ -22,6 +23,7 @@
 }
 .tag_red{
     background-color: #ff0000;
+    color: #ffffff;
 }
 .tag_yellow{
     background-color: #ffff00;
@@ -29,25 +31,30 @@
 }
 .tag_indigo{
     background-color: #4B0082;
+    color: #ffffff;
 }
 .tag_maroon{
     background-color: #800000;
+    color: #ffffff;
 }
 .tag_pink{
     background-color: #ffC0CB;
-    color: #000000;
 }
 .tag_violet{
     background-color: #ee82ee;
+    color: #ffffff;
 }
 .tag_cyan{
     background-color: #00ffff;
+    color: #000000;
 }
 .tag_magenta{
     background-color: #ff00ff;
+    color: #ffffff;
 }
 .tag_purple{
     background-color: #800080;
+    color: #ffffff;
 }
 .tag_gold{
     background-color: #ffcc00;
